# maktsprak

./: .env.example  .gitignore  .vercelignore  README.md  pyproject.toml  requirements.txt  run_etl.bat  setup.sh
.claude/: settings.local.json
.github/workflows/: ci.yml  keep-warm.yml  web-ci.yml
.streamlit/: config.toml
.vercel/: project.json
app/: streamlit_app.py
data/lexicons/: CHANGELOG.md  inclusive_occupational_pairs.csv  politisk_ton_lexikon.csv  vi_dom_patterns.csv
data/models/: README.md
data/models/party_classifier/: config.json  tokenizer.json  tokenizer_config.json
data/processed/: politisk_ton_lexikon.csv  stopwords-sv.txt
data/reports/: precision_antielit.csv  precision_folk.csv  precision_hen.csv  precision_klasskonflikt.csv  tone_validation.json
data/site/: distinctive.json  divergence.json  meta.json  movers.json  party_frames.json  trajectories.json  year_signatures.json
docs/: RETRAIN_RUNBOOK.md
inference_service/: Dockerfile  README.md  app.py  bake_model.py  requirements.txt
migrations/: 001_data_api_grants.sql  002_speeches_id_unique.sql
notebooks/: retrain_colab.ipynb
research/: README.md  llm_classify_benchmark.py  llm_language_profile.py
scripts/: _corpus.py  backfill_speeches.py  build_llm_study_ts.py  build_site_data.py  capture_heatmap.py  create_historic_database.py  evaluate_model.py  export_corpus.py  rebuild_corpus.py  reindex_speeches.py  train_party_model_db.py  train_party_model_db_v1_baseline.py  trim_supabase.py  validate_tone.py  verify_rebuild.py  wait_and_backfill.py
src/: __init__.py
src/maktsprak_pipeline/: __init__.py  config.py  db.py  etl.py  logger.py  main.py  model.py  nlp.py
src/maktsprak_pipeline/db/: __init__.py  client.py  speeches.py  tweets.py
src/maktsprak_pipeline/nlp/: __init__.py  cleaning.py  distinctiveness.py  drift.py  lexicon.py
src/maktsprak_pipeline/nlp/resources/: stopwords-sv.txt
src/maktsprak_pipeline/nlp/tone/: __init__.py  inclusive.py  kernel.py  readability.py  vi_dom.py
src/maktsprak_pipeline/pipeline/: __init__.py  extract.py  load.py  orchestrate.py  transform.py
tests/: conftest.py  test_cleaning.py  test_config.py  test_db.py  test_distinctiveness.py  test_drift.py  test_lexicon.py  test_tone_dimensions.py  test_tone_kernel.py  test_transform.py
web/: .env.example  README.md  package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/api/predict/: route.ts
web/src/app/fonts/: Redaction-OFL.txt
web/src/app/llm/: page.tsx
web/src/app/metod/: page.tsx
web/src/app/partierna/: page.tsx
web/src/app/riktmarke/: page.tsx
web/src/app/utveckling/: page.tsx
web/src/components/: ComingNext.tsx  DivergenceChart.tsx  LlmHeatmap.tsx  PartyFingerprintCard.tsx  PartyFrameChart.tsx  PartySpectrum.tsx  PredictDemo.tsx  PredictionBars.tsx  ProtokollMarker.tsx  RedactReveal.tsx  SiteFooter.tsx  SiteHeader.tsx  ThemeToggle.tsx  TrajectoryGrid.tsx  YearSlider.tsx
web/src/data/: distinctive.json  divergence.json  meta.json  movers.json  party_frames.json  trajectories.json
web/src/lib/: llm-study.ts  parties.ts  site-data.ts  supabase.ts
