[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "maktsprak-pipeline"
version = "0.2.0"
description = "ETL pipeline and NLP analysis for Swedish parliamentary language"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "requests>=2.31,<3.0",
    "pdfplumber>=0.11,<0.12",
    "tqdm>=4.66,<5.0",
    "python-dotenv",
    "tenacity",
    "pandas>=2.0,<3.0",
    "numpy>=1.25,<2.0",
    "pyarrow",
    "supabase",
    "loguru>=0.7,<1.0",
    "transformers>=4.44,<5.0",
    "huggingface-hub>=0.25,<0.26",
    "torch>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4,<9.0",
    "pytest-mock>=3.12",
    "ruff>=0.4",
]
train = [
    "scikit-learn>=1.3,<2.0",
    "datasets>=2.14,<3.0",
]
app = [
    "streamlit>=1.26,<3.0",
    "plotly>=5.15,<6.0",
    "wordcloud>=1.9,<2.0",
    "matplotlib>=3.8,<4.0",
    "streamlit-option-menu",
    "feedparser",
    "beautifulsoup4",
    "calplot",
    "statsmodels",
]

[project.scripts]
maktsprak-etl = "src.maktsprak_pipeline.main:main"

[tool.setuptools.packages.find]
where = ["."]

# ---------------------------------------------------------------------------
# Ruff — linter + formatter
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
    "B008",   # function call in default argument — used by Streamlit decorators
    "SIM108", # ternary operator — sometimes less readable
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
